--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <input type="email"><br>
         <label for="pass">Password</label><br>
         <input type="password"><br>
+        <label for="color"></label>
+        <input type="color">
     </form>
 
     
